tests/baselines/reference/ES5For-of30.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of30.ts(3,1): error TS2482: 'for...of' statements are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of30.ts (1 errors) ====
    var a: string, b: number;
    var tuple: [number, string] = [2, "3"];
    for ([a = 1, b = ""] of tuple) {
    ~~~
!!! error TS2482: 'for...of' statements are only available when targeting ECMAScript 6 or higher.
        a;
        b;
    }